add licence and repository description

--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "displayName": "Tag-Manager",
   "description": "manage your log-tag, basically for regex with name and description",
   "version": "1.0.0",
-  "publisher": "Yi.Zhong",
+  "publisher": "YiZhong",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LANGYE15/Tag-Manager.git"
+  },
   "engines": {
     "vscode": "^1.96.0"
   },
